// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: TextArea should render a disabled textarea 1`] = `
.c1 {
  border: 2px solid hsl(0,0%,90%);
  border-radius: 8px;
  min-height: 100px;
  min-width: 336px;
  box-sizing: border-box;
  font-size: 18px;
  line-height: 28px;
  padding: 8px 16px;
  outline: none;
  background-color: hsl(0,0%,90%);
  height: auto;
  width: auto;
  resize: none;
  display: block;
}

.c1:first-line {
  padding-right: 15px;
}

.c1:focus {
  border-color: hsl(200,96%,35%);
}

.c1::-webkit-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::-moz-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1:-ms-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c0 {
  position: relative;
  display: block;
}

<div>
  <div
    class="c0"
  >
    <textarea
      class="c1"
      disabled=""
    />
  </div>
</div>
`;

exports[`component: TextArea should render a success textarea 1`] = `
.c1 {
  border: 2px solid hsl(200,9%,35%);
  border-radius: 8px;
  min-height: 100px;
  min-width: 336px;
  box-sizing: border-box;
  font-size: 18px;
  line-height: 28px;
  padding: 8px 16px;
  outline: none;
  background-color: hsl(0,0%,100%);
  height: auto;
  width: auto;
  resize: none;
  display: block;
  border-color: hsl(145,89%,28%);
  background: hsla(145,89%,28%,0.2);
}

.c1:first-line {
  padding-right: 15px;
}

.c1:focus {
  border-color: hsl(200,96%,35%);
}

.c1::-webkit-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::-moz-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1:-ms-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c2 {
  vertical-align: middle;
  width: 18px;
  height: 18px;
  position: absolute;
  right: 10px;
  top: 10px;
  color: hsl(200,10%,20%);
}

.c0 {
  position: relative;
  display: block;
}

<div>
  <div
    class="c0"
  >
    <textarea
      class="c1"
    />
    <svg
      class="c2"
      fill="currentcolor"
      height="1em"
      status="success"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M9.81384674,19.7396292 C9.5249491,19.7396292 9.24415138,19.6325301 9.02725315,19.4381317 L3.38789908,14.3504731 C2.906403,13.9166766 2.86770331,13.1741827 3.30239977,12.6926866 C3.73619624,12.2120905 4.47869019,12.1724908 4.96018627,12.6071873 L9.67974783,16.8641526 L18.9127726,5.4369457 C19.3204693,4.93204981 20.0593633,4.85285046 20.5642592,5.26144713 C21.0682551,5.66914381 21.1465544,6.40803779 20.7388578,6.91293368 L10.7273393,19.3040328 C10.524841,19.5542307 10.2269434,19.7108295 9.90654599,19.7369292 C9.87504624,19.7387292 9.84444649,19.7396292 9.81384674,19.7396292"
      />
    </svg>
  </div>
</div>
`;

exports[`component: TextArea should render a textarea 1`] = `
.c1 {
  border: 2px solid hsl(200,9%,35%);
  border-radius: 8px;
  min-height: 100px;
  min-width: 336px;
  box-sizing: border-box;
  font-size: 18px;
  line-height: 28px;
  padding: 8px 16px;
  outline: none;
  background-color: hsl(0,0%,100%);
  height: auto;
  width: auto;
  resize: none;
  display: block;
}

.c1:first-line {
  padding-right: 15px;
}

.c1:focus {
  border-color: hsl(200,96%,35%);
}

.c1::-webkit-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::-moz-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1:-ms-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c0 {
  position: relative;
  display: block;
}

<div>
  <div
    class="c0"
  >
    <textarea
      class="c1"
    />
  </div>
</div>
`;

exports[`component: TextArea should render a textarea with a placeholder 1`] = `
.c1 {
  border: 2px solid hsl(200,9%,35%);
  border-radius: 8px;
  min-height: 100px;
  min-width: 336px;
  box-sizing: border-box;
  font-size: 18px;
  line-height: 28px;
  padding: 8px 16px;
  outline: none;
  background-color: hsl(0,0%,100%);
  height: auto;
  width: auto;
  resize: none;
  display: block;
}

.c1:first-line {
  padding-right: 15px;
}

.c1:focus {
  border-color: hsl(200,96%,35%);
}

.c1::-webkit-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::-moz-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1:-ms-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c0 {
  position: relative;
  display: block;
}

<div>
  <div
    class="c0"
  >
    <textarea
      class="c1"
      placeholder="Type something!"
    />
  </div>
</div>
`;

exports[`component: TextArea should render a warning textarea 1`] = `
.c1 {
  border: 2px solid hsl(200,9%,35%);
  border-radius: 8px;
  min-height: 100px;
  min-width: 336px;
  box-sizing: border-box;
  font-size: 18px;
  line-height: 28px;
  padding: 8px 16px;
  outline: none;
  background-color: hsl(0,0%,100%);
  height: auto;
  width: auto;
  resize: none;
  display: block;
  border-color: hsl(47,82%,47%);
  background: hsla(47,82%,47%,0.2);
}

.c1:first-line {
  padding-right: 15px;
}

.c1:focus {
  border-color: hsl(200,96%,35%);
}

.c1::-webkit-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::-moz-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1:-ms-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c2 {
  vertical-align: middle;
  width: 16px;
  height: 16px;
  position: absolute;
  right: 12px;
  top: 12px;
  color: hsl(200,10%,20%);
}

.c0 {
  position: relative;
  display: block;
}

<div>
  <div
    class="c0"
  >
    <textarea
      class="c1"
    />
    <svg
      class="c2"
      fill="currentcolor"
      height="1em"
      status="warning"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M1.39339828,12.7071068 C1.00287399,12.3165825 1.00287399,11.6834175 1.39339828,11.2928932 L11.2928932,1.39339828 C11.6834175,1.00287399 12.3165825,1.00287399 12.7071068,1.39339828 L22.6066017,11.2928932 C22.997126,11.6834175 22.997126,12.3165825 22.6066017,12.7071068 L12.7071068,22.6066017 C12.3165825,22.997126 11.6834175,22.997126 11.2928932,22.6066017 L1.39339828,12.7071068 Z M3.51471863,12 L12,20.4852814 L20.4852814,12 L12,3.51471863 L3.51471863,12 Z M12,16 C11.4477153,16 11,15.5522847 11,15 C11,14.4477153 11.4477153,14 12,14 C12.5522847,14 13,14.4477153 13,15 C13,15.5522847 12.5522847,16 12,16 Z M13,12 C13,12.5522847 12.5522847,13 12,13 C11.4477153,13 11,12.5522847 11,12 L11,9 C11,8.44771525 11.4477153,8 12,8 C12.5522847,8 13,8.44771525 13,9 L13,12 Z"
      />
    </svg>
  </div>
</div>
`;

exports[`component: TextArea should render an error textarea 1`] = `
.c1 {
  border: 2px solid hsl(200,9%,35%);
  border-radius: 8px;
  min-height: 100px;
  min-width: 336px;
  box-sizing: border-box;
  font-size: 18px;
  line-height: 28px;
  padding: 8px 16px;
  outline: none;
  background-color: hsl(0,0%,100%);
  height: auto;
  width: auto;
  resize: none;
  display: block;
  border-color: hsl(353,84%,44%);
  background: hsla(353,84%,44%,0.2);
}

.c1:first-line {
  padding-right: 15px;
}

.c1:focus {
  border-color: hsl(200,96%,35%);
}

.c1::-webkit-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::-moz-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1:-ms-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c2 {
  vertical-align: middle;
  width: 16px;
  height: 16px;
  position: absolute;
  right: 12px;
  top: 12px;
  color: hsl(200,10%,20%);
}

.c0 {
  position: relative;
  display: block;
}

<div>
  <div
    class="c0"
  >
    <textarea
      class="c1"
    />
    <svg
      class="c2"
      fill="currentcolor"
      height="1em"
      status="error"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M11.1055728,1.5527864 C11.4740971,0.815737865 12.5259029,0.815737865 12.8944272,1.5527864 L22.8944272,21.5527864 C23.2268777,22.2176875 22.743382,23 22,23 L2,23 C1.25661798,23 0.773122263,22.2176875 1.10557281,21.5527864 L11.1055728,1.5527864 Z M3.61803399,21 L20.381966,21 L12,4.23606798 L3.61803399,21 Z M12,18 C11.4477153,18 11,17.5522847 11,17 C11,16.4477153 11.4477153,16 12,16 C12.5522847,16 13,16.4477153 13,17 C13,17.5522847 12.5522847,18 12,18 Z M13,14 C13,14.5522847 12.5522847,15 12,15 C11.4477153,15 11,14.5522847 11,14 L11,11 C11,10.4477153 11.4477153,10 12,10 C12.5522847,10 13,10.4477153 13,11 L13,14 Z"
      />
    </svg>
  </div>
</div>
`;

exports[`component: TextArea should support margin space props 1`] = `
.c1 {
  border: 2px solid hsl(200,9%,35%);
  border-radius: 8px;
  min-height: 100px;
  min-width: 336px;
  box-sizing: border-box;
  font-size: 18px;
  line-height: 28px;
  padding: 8px 16px;
  outline: none;
  background-color: hsl(0,0%,100%);
  height: auto;
  width: auto;
  resize: none;
  display: block;
}

.c1:first-line {
  padding-right: 15px;
}

.c1:focus {
  border-color: hsl(200,96%,35%);
}

.c1::-webkit-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::-moz-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1:-ms-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c0 {
  position: relative;
  display: block;
  margin-left: 32px;
}

<div>
  <div
    class="c0"
  >
    <textarea
      class="c1"
    />
  </div>
</div>
`;
